--- a/src/test/resources/sample.html
+++ b/src/test/resources/sample.html
@@ -2,15 +2,15 @@
 	<div style=\"height: 80px; font-size:24px; font-weight: bold; line-height: 40px; padding-left: 40px; color: black;\">        PRODIGY    </div>
 	<div style=\"height:220px; width: 80%; text-align: center; background: clear; margin: auto;\">
 		<div style=\"height:240px; width: 45%; background: clear; float: left;\">
-			<div                style=\"height:80px; width:80px; text-align: center; background: #E30504; border-radius: 80px; font-size: 36px; font-weight: bold; color: #fff; line-height: 80px; margin: auto;\">20            </div>
+			<div                style=\"height:80px; width:80px; text-align: center; background: #E30504; border-radius: 80px; font-size: 36px; font-weight: bold; color: #fff; line-height: 80px; margin: auto;\">RISK_SCORE            </div>
 			<h4 style=\"color: black; font-weight: lighter;\">PRODIGY SCORE</h4>
-			<h4 style=\"color: #E30504;\">RISK_SCORE</h4>
+			<h4 style=\"color: #E30504;\">RISK_TEXT</h4>
 		</div>
 		<div style=\"height:240px; width: 55%; background: clear; float: left;\">
-			<p style=\"color: black; text-align: left;\">This patient is at HIGH RISK for opioid-induced respiratory depression. Consider placing the patient on capnography monitoring.</p>
+			<p style=\"color: black; text-align: left;\">This patient is at RISK_TEXT for opioid-induced respiratory depression. CAPNOGRAPHY_MONITORING</p>
 			<p style=\"color: #308DCD; text-align: left;\">Capnography Monitoring Policy</p>
 			<p style=\"text-align: left;\">
-				<a style=\"color: #308DCD;\" href=\"https://www.medtronic.com/content/dam/covidien/library/us/en/product/capnography-monitoring/microstream-capnography-breath-monitoring-matters-info-sheet.pdf\" target=\"_blank\" rel=\"noopener noreferrer\">About Capnography</a>
+<a style=\"color: #308DCD;\" href=\"https://www.medtronic.com/content/dam/covidien/library/us/en/product/capnography-monitoring/microstream-capnography-breath-monitoring-matters-info-sheet.pdf\" target=\"_blank\" rel=\"noopener noreferrer\">About Capnography</a>
 			</p>
 			<div style=\"height:55px; width: 100%; background: #EEEEEE;\">
 				<table style=\"width: 100%; height: 100%; font-size: 11px\">
