ProdigyService now correctly formats html.  Created test inputs for variety of scenarios.

--- a/src/test/resources/sample.html
+++ b/src/test/resources/sample.html
@@ -21,7 +21,7 @@
             <h4 style="color: black; font-weight: lighter;">PRODIGY SCORE</h4>
         </div>
         <div style="height:240px; width: 55%; background: clear; float: left;">
-            <p style="color: black; text-align: left;">This patient is at RISK_TEXT for opioid-induced respiratory depression. CAPNOGRAPHY_MONITORING</p>
+            <p style="color: black; text-align: left;">This patient is at <b>RISK_TEXT</b> for opioid-induced respiratory depression. CAPNOGRAPHY_MONITORING</p>
             <p style="color: #308DCD; text-align: left;">Capnography Monitoring Policy</p>
             <p style="text-align: left;">
                 <a style="color: #308DCD;" href="https://www.medtronic.com/content/dam/covidien/library/us/en/product/capnography-monitoring/microstream-capnography-breath-monitoring-matters-info-sheet.pdf" target="_blank" rel="noopener noreferrer">About Capnography</a>
